added background image

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </nav>
 
         <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn">Location History</button>
+            <button onclick="myFunction()" class="dropbtn">Locations</button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="https://www.youtube.com/">Dallas</a>
+              <!-- <a href="https://www.youtube.com/">Dallas</a>
               <a href="#about">About</a>
-              <button id=""></button>
+              <button id=""></button> -->
             </div>
         </div>
 
