--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
-        <title>Crazy Weather</title>
+        <title>Weather Dashboard</title>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
@@ -23,16 +23,7 @@
 
         </nav>
 
-        <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn">Locations</button>
-            <div id="myDropdown" class="dropdown-content">
-              <!-- <a href="https://www.youtube.com/">Dallas</a>
-              <a href="#about">About</a>
-              <button id=""></button> -->
-            </div>
-        </div>
-
-        <!-- current day forcast section -->
+        <!-- current day forecast section -->
         <section class="weather">
             <h2 class="city"></h2>
             <p class="day"></p>
@@ -47,7 +38,7 @@
                 <div class="detail-info">
                     <li class="wind"></li>
                     <li class="humidity"></li>
-                    <li id="uv" class="veryHigh">UV 0.65</li>
+                    <li id="uv" class="veryHigh"></li>
                 </div>
             </div>
 
