added a function to create buttons for search history and updated README with information about the application

--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
                 <button id="glass"><i class="fa-solid fa-magnifying-glass search"></i></button>
               
             </div>
-            <!-- creates dropdown menu -->
+
+            <button id="clear" type="reset">Clear History</button>
+
 
         </nav>
+
+        <!-- <form id="history"></form> -->
 
         <!-- current day forecast section -->
         <section class="weather">
@@ -147,6 +151,8 @@
 
 
         </section>
+
+        <form id="history"></form>
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
